--- a/WorkitemCreator/WorkitemCreator.csproj
+++ b/WorkitemCreator/WorkitemCreator.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>annotations</Nullable>
+    <TargetFramework>net48</TargetFramework>
+    <!--<Nullable>disable</Nullable>-->
     <UseWPF>true</UseWPF>
-    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <!--<ProduceReferenceAssembly>False</ProduceReferenceAssembly>-->
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+
+    <RestoreLockedMode>true</RestoreLockedMode>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,6 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="15.131.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="15.131.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
