Added project collection and project selection
Next get workitem defs after project selection and compare to selected templatre before allowing WI creation

--- a/WorkitemCreator/config.json
+++ b/WorkitemCreator/config.json
@@ -1,5 +1,7 @@
 {
   "ServiceUrl": "https://astanton1978.visualstudio.com/",
+  "LastSelectedTeamProjectCollection": "",
+  "LastSelectedTeamProject": "",
   "IncludeStoryNumberInTaskTitle": false,
   "Templates": [
     {
