--- a/WorkitemCreator/WorkitemCreator.csproj
+++ b/WorkitemCreator/WorkitemCreator.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="15.131.1" />
     <PackageReference Include="Microsoft.VisualStudio.Services.Client" Version="15.131.1" />
     <PackageReference Include="Microsoft.VisualStudio.Services.InteractiveClient" Version="15.131.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
