refactored the connection info, added a readme and part of the WI creation code

--- a/WorkitemCreator/config.json
+++ b/WorkitemCreator/config.json
@@ -1,5 +1,5 @@
 {
-  "ServiceUrl": "https://astanton1978.visualstudio.com/",
+  "ServiceUrl": "https://dev.azure.com/astanton1978Sandbox/",
   "LastSelectedTeamProjectCollection": "",
   "LastSelectedTeamProject": "",
   "IncludeStoryNumberInTaskTitle": false,
