--- a/WorkitemCreator/config.json
+++ b/WorkitemCreator/config.json
@@ -5,35 +5,50 @@
   "IncludeStoryNumberInTaskTitle": false,
   "Templates": [
     {
-      "Name": "Standard User Story",
-      "WorkitemType": "User Story",
-      "Title": "Add a feature",
-      "Description": "This is a standard user story with development and testing tasks",
+      "TemplateSetName": "Standard User Story",
+      "TemplateId": "eddbce71-0582-4d6c-827e-abadda0dfaa7",
+      "TemplateName": "T1 Story Template2",
+      "WorkItemType": "Task",
       "Children": [
         {
-          "Name": "Dev Task",
-          "WorkitemType": "Task",
-          "Title": "Development",
-          "Description": "Do the programming",
-          "AdditionalFields": {
-            "Activity": "Development",
-            "Remaining Time": "8"
-          }
+          "TemplateId": "1352e4db-5b0a-4677-a996-ac688cef07e7",
+          "TemplateName": "T1 Task Template 1"
         },
         {
-          "Name": "Test Task",
-          "WorkitemType": "Task",
-          "Title": "Testing",
-          "Description": "Do the testing",
-          "AdditionalFields": {
-            "Activity": "Testing",
-            "Remaining Time": "4"
-          }
+          "TemplateId": "64248f49-d71c-4679-ae3f-1bb6d2628139",
+          "TemplateName": "T1 Task Template 2"
         }
-      ],
-      "AdditionalFields": {
-        "Acceptance Criteria": "To 'boldligo'"
-      }
+
+      ]
+
+      //"WorkitemType": "User Story",
+      //"Title": "Add a feature",
+      //"Description": "This is a standard user story with development and testing tasks",
+      //"Children": [
+      //  {
+      //    "Name": "Dev Task",
+      //    "WorkitemType": "Task",
+      //    "Title": "Development",
+      //    "Description": "Do the programming",
+      //    "AdditionalFields": {
+      //      "Activity": "Development",
+      //      "Remaining Time": "8"
+      //    }
+      //  },
+      //  {
+      //    "Name": "Test Task",
+      //    "WorkitemType": "Task",
+      //    "Title": "Testing",
+      //    "Description": "Do the testing",
+      //    "AdditionalFields": {
+      //      "Activity": "Testing",
+      //      "Remaining Time": "4"
+      //    }
+      //  }
+      //],
+      //"AdditionalFields": {
+      //  "Acceptance Criteria": "To 'boldligo'"
+      //}
     },
     {
       "Name": "DB Script only User Story",
