--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -82,6 +82,9 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
+    - name: nuget restore
+      run: nuget restore $env:Solution_Name
+      
     # Build the sln
     - name: Build the solution
       run: msbuild $env:Solution_Name /t:Build /p:Configuration=$env:Configuration
